--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     /* 뷰포트/줌 레이어 */
     #viewer{
       position:relative;display:grid;place-items:center;overflow:hidden;background:transparent;
-      touch-action:none; /* Panzoom이 제스처 전담 */
+      touch-action:none;
     }
     #zoomLayer{
       position:relative;width:fit-content;height:fit-content;
@@ -39,7 +39,12 @@
     #flip{
       position:relative; width:var(--content-w); height:var(--page-h);
       transition:none; background:var(--paper-dark);
+      /* 1) Hover 애니메이션 완전 차단 */
+      pointer-events:none;
     }
+    /* 혹시 내부 엘리먼트에 이벤트가 걸려 있으면 모두 차단 */
+    #flip * { pointer-events:none !important; }
+
     .stf__canvas, .stf_canvas, #flip canvas { background:var(--paper-dark) !important; }
 
     input[type="number"]{width:70px;background:transparent;border:none;color:inherit;text-align:right;font-weight:700}
@@ -128,7 +133,7 @@
   // Panzoom
   let pz = null;
   const MIN_SCALE = 0.25, MAX_SCALE = 4.0;
-  let panState = { x:0, y:0, scale:1 }; // Panzoom 상태 캐시
+  let panState = { x:0, y:0, scale:1 };
 
   // 페이지/레이아웃
   let PAGE_W = 1240, PAGE_H = 1624; // 첫 이미지로 자동 감지
@@ -138,7 +143,7 @@
   let CONTENT_W = BOOK_W;
 
   // 엣지 탭 내비
-  const EDGE_TAP_ZONE = 0.22, TAP_MAX_DIST = 8, TAP_MAX_MS = 300;
+  const EDGE_TAP_ZONE = 0.18, TAP_MAX_DIST = 8, TAP_MAX_MS = 300;
   let tapStart = null;
 
   function setStatus(msg){ statusEl.textContent = msg; }
@@ -157,22 +162,20 @@
     root.style.setProperty('--content-w', CONTENT_W + 'px');
   }
 
-  // 누락됐던 함수 추가!
   function getImageSize(url){
     return new Promise((resolve, reject)=>{
       const img = new Image();
-      // 교차 출처 이미지가 필요하면 서버에서 CORS 헤더 설정 필요
       img.onload = ()=>resolve({ w: img.naturalWidth, h: img.naturalHeight });
       img.onerror = ()=>reject(new Error('이미지 로드 실패: ' + url));
       img.src = url;
     });
   }
 
-  // Panzoom 세팅
+  // === Panzoom 세팅 ===
   function computeFit() {
     const vw = viewer.clientWidth, vh = viewer.clientHeight;
     const fit = Math.min(vw / CONTENT_W, vh / PAGE_H);
-    const startScale = Math.max(MIN_SCALE, Math.min(1, fit));
+    const startScale = Math.max(MIN_SCALE, Math.min(1, fit));  // 2) 화면에 맞게 축소
     const startX = Math.round((vw - CONTENT_W * startScale) / 2);
     const startY = Math.round((vh - PAGE_H     * startScale) / 2);
     return { startScale, startX, startY };
@@ -190,17 +193,22 @@
       pz = Panzoom(zoomLayer, {
         startScale, startX, startY,
         minScale: MIN_SCALE, maxScale: MAX_SCALE,
-        canvas: true,                 // 부모 기준 드래그 허용
-        contain: 'outside',           // 바깥 여백 허용
-        panOnlyWhenZoomed: true,      // 100% 이하는 패닝 금지(오동작 방지)
+        canvas: true,
+        contain: 'outside',
+        panOnlyWhenZoomed: true,
         touchAction: 'none',
         cursor: 'grab'
       });
 
-      // 휠/트랙패드 줌
+      // 3) 커스텀 휠 줌(확대/축소 모두 자연스럽게)
       viewer.addEventListener('wheel', (e)=>{
         e.preventDefault();
-        pz.zoomWithWheel(e);
+        const rect = viewer.getBoundingClientRect();
+        const cx = e.clientX, cy = e.clientY;
+        // 지수 스케일 팩터(부드럽게) — deltaY>0이면 축소
+        const factor = Math.exp(-e.deltaY / 300);
+        const target = Math.min(MAX_SCALE, Math.max(MIN_SCALE, pz.getScale() * factor));
+        pz.zoomToPoint(target, { clientX: cx, clientY: cy }, { animate:false });
       }, { passive:false });
 
       // 배율/좌표 상태 동기화
@@ -221,12 +229,16 @@
         const r = viewer.getBoundingClientRect();
         pz.zoomToPoint(target, { clientX: r.left + r.width/2, clientY: r.top + r.height/2 }, { animate:false });
       });
+
+      // 혹시 초기 적용이 지연될 수 있으니 한 프레임 뒤 재적용
+      requestAnimationFrame(()=> pz.reset({ startX, startY, startScale, animate:false }));
     } else {
-      // 완전 재생성 경로만 사용하므로 여기엔 안 옴
+      // 레이아웃 바뀌면 정확히 리셋
+      pz.reset({ startX, startY, startScale, animate:false });
     }
   }
 
-  // PageFlip 초기화 (모드 기반)
+  // === PageFlip 초기화 ===
   function initFlip(imageURLs, forcePortrait){
     flipRoot.innerHTML = '';
     if (pageFlip){ pageFlip.destroy(); pageFlip = null; }
@@ -237,9 +249,9 @@
       minWidth: PAGE_W, maxWidth: PAGE_W,
       minHeight: PAGE_H, maxHeight: PAGE_H,
       usePortrait: portrait,
-      showCover: portrait ? false : true, // 단면이면 Cover 비활성화(Prev 이슈 방지)
+      showCover: portrait ? false : true,
       maxShadowOpacity: .2,
-      mobileScrollSupport: false,        // 제스처는 Panzoom만
+      mobileScrollSupport: false,
       disableFlipByClick: true
     });
     pageFlip.loadFromImages(imageURLs);
@@ -249,17 +261,8 @@
   }
 
   // Prev/Next(안전 래퍼)
-  function goPrev(){
-    if(!pageFlip) return;
-    const i = pageFlip.getCurrentPageIndex();
-    if (i > 0) pageFlip.flip(i - 1);
-  }
-  function goNext(){
-    if(!pageFlip) return;
-    const i = pageFlip.getCurrentPageIndex();
-    const n = pageFlip.getPageCount();
-    if (i < n - 1) pageFlip.flip(i + 1);
-  }
+  function goPrev(){ if(!pageFlip) return; const i = pageFlip.getCurrentPageIndex(); if (i > 0) pageFlip.flip(i - 1); }
+  function goNext(){ if(!pageFlip) return; const i = pageFlip.getCurrentPageIndex(); const n = pageFlip.getPageCount(); if (i < n - 1) pageFlip.flip(i + 1); }
 
   // manifest
   async function fetchManifest(url){
@@ -288,7 +291,7 @@
     CONTENT_W = isSinglePageMode ? PAGE_W : BOOK_W;
     applyCSSVars();
     initFlip(currentPages, isSinglePageMode);
-    setupPanzoom(true); // 새 레이아웃 기준으로 Panzoom 재생성
+    setupPanzoom(true);
     setStatus('Ready');
   }
   function applyModeOnResize(){
@@ -300,12 +303,11 @@
       applyCSSVars();
       initFlip(currentPages, isSinglePageMode);
       pageFlip.flip(idx);
-      setupPanzoom(true);
     } else {
       CONTENT_W = isSinglePageMode ? PAGE_W : BOOK_W;
       applyCSSVars();
-      setupPanzoom(true);
     }
+    setupPanzoom(true);
   }
 
   // 컨트롤 버튼
@@ -325,21 +327,16 @@
     }
   });
 
-  // ==== 가장자리 탭으로만 페이지 넘김 (배율 ≤ 1) ====
+  // 가장자리 탭으로만 페이지 넘김 (배율 ≤ 1)
   viewer.addEventListener('pointerdown', (e)=>{
-    // Panzoom과 충돌 피하려고 기록만 함 (preventDefault 금지)
     tapStart = { x:e.clientX, y:e.clientY, t:performance.now() };
   }, { capture:true });
-
   viewer.addEventListener('pointerup', (e)=>{
-    if (!tapStart) return;
+    if (!tapStart || !pageFlip || !pz) return;
     const moved = Math.hypot(e.clientX - tapStart.x, e.clientY - tapStart.y);
     const dt = performance.now() - tapStart.t;
     tapStart = null;
-
-    if (!pageFlip || !pz) return;
-    if (panState.scale > 1) return; // 확대 중엔 페이징 금지(패닝 우선)
-
+    if (pz.getScale() > 1) return;
     if (moved <= TAP_MAX_DIST && dt <= TAP_MAX_MS){
       const r = flipRoot.getBoundingClientRect();
       if (e.clientY >= r.top && e.clientY <= r.bottom){
@@ -350,16 +347,17 @@
     }
   }, { capture:true });
 
-  // ==== 키보드: 확대 시 패닝 / 100% 이하는 페이징 ====
+  // 키보드: 확대 시 패닝 / 100% 이하는 페이징
   const PAN_STEP_PX = 120;
   window.addEventListener('keydown', (e)=>{
     if (isTextInputFocused()) return;
     const k = e.key;
     if (!['ArrowLeft','ArrowRight','ArrowUp','ArrowDown'].includes(k)) return;
     e.preventDefault();
-    if (pz && panState.scale > 1){
-      const step = PAN_STEP_PX / panState.scale;
-      let nx = panState.x, ny = panState.y;
+    if (pz && pz.getScale() > 1){
+      const step = PAN_STEP_PX / pz.getScale();
+      const pan = pz.getPan ? pz.getPan() : { x:panState.x, y:panState.y };
+      let nx = pan.x, ny = pan.y;
       if (k === 'ArrowLeft')  nx += step;
       if (k === 'ArrowRight') nx -= step;
       if (k === 'ArrowUp')    ny += step;
@@ -387,7 +385,7 @@
       PAGE_W = dim.w; PAGE_H = dim.h; BOOK_W = PAGE_W * 2; CONTENT_W = BOOK_W;
       applyCSSVars();
 
-      applyModeInit(); // 단면/스프레드 초기화 & Panzoom 준비
+      applyModeInit();
     }catch(e){
       console.error(e);
       setStatus('로드 오류: ' + (e.message || e));
@@ -397,7 +395,7 @@
   // 우클릭 방지
   document.addEventListener('contextmenu', (e)=>{ e.preventDefault(); }, { capture:true });
 
-  // 제목 자동 맞춤
+  // 제목 자동 맞춤(선택)
   function fitTitle() {
     const box = document.querySelector('.titleBox');
     const text = document.getElementById('bookTitle');
@@ -415,9 +413,6 @@
   }
   let _fitTimer = null;
   function fitTitleDebounced(){ clearTimeout(_fitTimer); _fitTimer = setTimeout(fitTitle, 120); }
-
-  // 리사이즈에서 Panzoom/레이아웃 재설정
-  let _resizeTimer = null;
   window.addEventListener('resize', ()=>{
     clearTimeout(_resizeTimer);
     _resizeTimer = setTimeout(()=>{
@@ -425,6 +420,7 @@
       fitTitleDebounced();
     }, 120);
   });
+  let _resizeTimer=null;
 </script>
 </body>
 </html>
